# scalar

./: .gitignore  Data_Analysis1  Dockerfile  GITHUB_SETUP.md  README.md  execute_nb.py  executed.ipynb  inference.py  openenv.yaml  pyproject.toml  report.html  requirements.txt  start_mac_linux.sh  start_windows.cmd  student_data.csv  student_dropout_system.ipynb
