[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supportdesk-openenv"
version = "0.1.0"
description = "A real-world customer support triage environment for OpenEnv-style evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1",
  "httpx>=0.27,<1",
  "openai>=1.30,<2",
  "pydantic>=2.7,<3",
  "uvicorn[standard]>=0.29,<1",
]

[tool.setuptools.packages.find]
include = ["supportdesk_env*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

